# ladon

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  PROOFIR_BRIDGE.md  PROOF_SURFACE_WITNESS.md
docs/policies/: architecture-policy.example.json  source-pattern-policy.example.json
paper/ladon-code-quality/: INDEX.md  manifest.json
scripts/: __init__.py  ladon_atlas_diff.py  ladon_atlas_export.py  ladon_atlas_query.py  ladon_atlas_workflow.py  ladon_calibration_regression.py  ladon_openspec_backlog.py  ladon_openspec_hygiene.py  ladon_root_matrix.py  python_quality.py
src/ladon/: __init__.py  atlas.py  atlas_diff.py  atlas_sqlite.py  atlas_workflow.py  bifr_paper_theorem_qc_lib.py  calibration.py  cli.py  (+14 more)
tests/: test_architecture_correlator.py  test_architecture_policy.py  test_atlas.py  test_atlas_diff.py  test_atlas_script.py  test_atlas_sqlite.py  test_atlas_workflow.py  test_benchmark_oracles.py  test_calibration_regression.py  test_calibration_regression_script.py  test_claim_authority.py  test_clean_cli.py  test_declaration_graph.py  test_extraction.py  test_findings.py  test_lean_extraction.py  test_module_dag.py  test_openspec_backlog.py  test_openspec_hygiene.py  test_pipeline.py  test_pro_review_packet_helper.py  test_proof_family_similarity.py  test_proof_surface_witness.py  test_proofir_bridge.py  test_proofir_bridge_cli.py  test_python_quality.py  test_quality_baseline.py  test_quality_baseline_pipeline.py  test_render.py  test_review_regions.py  test_root_matrix.py  test_root_matrix_script.py  test_source_patterns.py  test_witness_packet.py
(+477 files in other folders)
