[project]
name = "ladon"
version = "0.1.0"
description = "Lean-oriented code-quality, proof-graph, witness, and review-packet analyzer"
readme = "README.md"
authors = [
    { name = "Aki Rehn", email = "aki.rehn@helsinki.fi" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ladon = "ladon:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
