[project]
name = "ladon"
version = "0.1.0"
description = "Lean-oriented code-quality, proof-graph, witness, and review-packet analyzer"
readme = "README.md"
authors = [
    { name = "Aki Rehn", email = "aki.rehn@helsinki.fi" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ladon = "ladon:main"
ladon-proofir-bridge = "ladon.proofir_bridge_cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "radon>=6.0.1",
    "vulture>=2.16",
]
